--- a/src/main/resources/templates/fragments/nav1.html
+++ b/src/main/resources/templates/fragments/nav1.html
@@ -39,8 +39,8 @@
                     Pair Journals
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/cs">Chris + Shekar</a>
-                    <a class="dropdown-item" href="/ds">Dylan + Sam</a>
+                    <a class="dropdown-item" href="/ak">Abhijay + Kian</a>
+                    <a class="dropdown-item" href="/jrs">Justin + Rohan + Shekar</a>
                 </div>
             </li>
             <li style="cursor: default">|</li>
@@ -54,6 +54,8 @@
                     <a class="dropdown-item" href="/grayscale">Grayscale Converter</a>
                     <a class="dropdown-item" href="/base64">RGB values in images</a>
                     <a class="dropdown-item" href="/upload">Upload and Share Images</a>
+                    <a class="dropdown-item" href="/light">Light Sequence</a>
+
                 </div>
             </li>
             <li style="cursor: default">|</li>
