--- a/src/main/resources/templates/fragments/nav1.html
+++ b/src/main/resources/templates/fragments/nav1.html
@@ -54,7 +54,19 @@
                     <a class="dropdown-item" href="/grayscale">Grayscale Converter</a>
                     <a class="dropdown-item" href="/base64">RGB values in images</a>
                     <a class="dropdown-item" href="/upload">Upload and Share Images</a>
-                    <a class="dropdown-item" href="/light">Light Sequence</a>
+
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle navtext" href="#" id="navbarAboutUs" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    About us
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/abhijay">Abhijay</a>
+                    <a class="dropdown-item" href="/kian">Kian</a>
+                    <a class="dropdown-item" href="/shekar">Shekar</a>
+                    <a class="dropdown-item" href="/rohan">Rohan</a>
+                    <a class="dropdown-item" href="/justin">Justin</a>
 
                 </div>
             </li>
