--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -20,7 +20,8 @@
 
   <div class="row justify-content-center">
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe5.png" th:src="@{/images/joe5.png}" width="50" height="50" class="face" alt="shekar">
+      <img src="/src/main/staticin/static/images/justin.jpg" th:src="@{/images/justin.jpg}" width="50" height="50" class="face" alt="justin">
+      <!--th:src="@{static/images/justin.jpg}"-->
       <p class="face-name">Justin Li</p>
       <p class="face-text">Navigator</p>
       <dl>
@@ -30,7 +31,7 @@
       <center><a href="https://github.com/shekark642" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe2.png" th:src="@{/images/joe2.png}" width="50" height="50" class="face" alt="chris">
+      <img src="/src/main/staticin/static/images/shekar.jpg" th:src="@{/images/shekar.jpg}" width="50" height="50" class="face" alt="shekar">
       <p class="face-name">Shekar Krishnamoorthy</p>
       <p class="face-text">Developer</p>
       <dl>
@@ -40,7 +41,7 @@
       <center><a href="https://github.com/jli615" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe3.png" th:src="@{/images/joe3.png}" width="50" height="50" class="face" alt="sam">
+      <img src="/src/main/staticin/static/images/rohan.jpg" th:src="@{/images/rohan.jpg}" width="50" height="50" class="face" alt="rohan">
       <p class="face-name">Rohan Koshy</p>
       <p class="face-text">Designer</p>
       <dl>
@@ -50,7 +51,7 @@
       <center><a href="https://github.com/RohanKoshy" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe4.png" th:src="@{/images/joe4.png}" width="50" height="50" class="face" alt="dylan">
+      <img src="/src/main/staticin/static/images/kian.jpg" th:src="@{/images/kian.jpg}" width="50" height="50" class="face" alt="kian">
       <p class="face-name">Kian Kishimoto</p>
       <p class="face-text">Tech Lead</p>
       <dl>
@@ -60,7 +61,7 @@
       <center><a href="https://github.com/Uhpachee" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe4.png" th:src="@{/images/joe4.png}" width="50" height="50" class="face" alt="dylan">
+      <img src="/src/main/staticin/static/images/abhijay.jpg" th:src="@{/images/abhijay.jpg}" width="50" height="50" class="face" alt="abhijay">
       <p class="face-name">Abhijay Deevi</p>
       <p class="face-text">Tech Lead</p>
       <dl>
