--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -20,10 +20,10 @@
 
   <div class="row justify-content-center">
     <div class="column">
-      <img src="/src/main/staticin/static/images/justin.jpg" th:src="@{/images/justin.jpg}" width="50" height="50" class="face" alt="justin">
-      <!--th:src="@{static/images/justin.jpg}"-->
+      <img src="/src/main/staticin/static/images/don't panic chicken.jpg" th:src="@{/images/don't panic chicken.jpg}" width="50" height="50" class="face" alt="justinface">
+      <!--th:src="@{static/images/don't panic chicken.jpg}"-->
       <p class="face-name">Justin Li</p>
-      <p class="face-text">Navigator</p>
+      <p class="face-text">Deployment Manager</p>
       <dl>
         <dt>TBD</dt>
         <dd>Desc. soon</dd>
@@ -31,9 +31,9 @@
       <center><a href="https://github.com/shekark642" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/shekar.jpg" th:src="@{/images/shekar.jpg}" width="50" height="50" class="face" alt="shekar">
+      <img src="/src/main/staticin/static/images/ncs_logo.jpg" th:src="@{/images/ncs_logo.jpg}" width="50" height="50" class="face" alt="shekar">
       <p class="face-name">Shekar Krishnamoorthy</p>
-      <p class="face-text">Developer</p>
+      <p class="face-text">Github Admin</p>
       <dl>
         <dt>TBD</dt>
         <dd>Desc. soon</dd>
@@ -41,9 +41,9 @@
       <center><a href="https://github.com/jli615" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/rohan.jpg" th:src="@{/images/rohan.jpg}" width="50" height="50" class="face" alt="rohan">
+      <img src="/src/main/staticin/static/images/chickenbg.jpg" th:src="@{/images/chickenbg.jpg}" width="50" height="50" class="face" alt="rohan">
       <p class="face-name">Rohan Koshy</p>
-      <p class="face-text">Designer</p>
+      <p class="face-text">Technical Officer</p>
       <dl>
         <dt>TBD</dt>
         <dd>Desc. soon</dd>
@@ -51,9 +51,9 @@
       <center><a href="https://github.com/RohanKoshy" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/kian.jpg" th:src="@{/images/kian.jpg}" width="50" height="50" class="face" alt="kian">
+      <img src="/src/main/staticin/static/images/bulb_on.jpg" th:src="@{/images/bulb_on.jpg}" width="50" height="50" class="face" alt="kian">
       <p class="face-name">Kian Kishimoto</p>
-      <p class="face-text">Tech Lead</p>
+      <p class="face-text">Web Designer</p>
       <dl>
         <dt>TBD</dt>
         <dd>Desc. soon</dd>
@@ -61,9 +61,9 @@
       <center><a href="https://github.com/Uhpachee" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/abhijay.jpg" th:src="@{/images/abhijay.jpg}" width="50" height="50" class="face" alt="abhijay">
+      <img src="/src/main/staticin/static/images/bulb_off.jpg" th:src="@{/images/bulb_off.jpg}" width="50" height="50" class="face" alt="abhijay">
       <p class="face-name">Abhijay Deevi</p>
-      <p class="face-text">Tech Lead</p>
+      <p class="face-text">Scrum Master</p>
       <dl>
         <dt>TBD</dt>
         <dd>Desc. soon</dd>
