linked about us

--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -56,7 +56,7 @@
       <p class="face-text">Web Designer</p>
       <dl>
         <dt>TBD</dt>
-        <dd>Desc. soon</dd>
+        <a href="/kian">Individual About Us Page</a>
       </dl>
       <center><a href="https://github.com/Uhpachee" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
