justin about us part 2

--- a/src/main/resources/templates/justin.html
+++ b/src/main/resources/templates/justin.html
@@ -9,7 +9,7 @@
 
 <body style="background-color:cornflowerblue"><div layout:fragment="content" th:remove="tag">
     <a  style="font-size:xxx-large">Justin</a><br>
-    <img src="/src/main/staticin/static/images/bulb_on.jpg" th:src="@{/images/bulb_on.jpg}" width="100" height="auto" id="getImage"><br>
+    <img src="/src/main/staticin/static/images/don't panic chicken.jpg" th:src="@{/images/don't panic chicken.jpg}" width="100" height="auto" id="getImage"><br>
     <input type="button" onclick="imagefun()" value="Change Image"><br>
     <a href="/justin/light">Light Sequence Minilab</a>
     <a href="https://docs.google.com/document/d/1K9bE17_RsneMIv-P-jf_3fWYD74xZ2KxzF0jPK18vAY/edit?usp=sharing">Journal</a>
