--- a/src/main/resources/templates/justin.html
+++ b/src/main/resources/templates/justin.html
@@ -18,15 +18,15 @@
     <a href="https://github.com/shekark642/M222-Slackbotss/projects/1">Scrumboard</a>
     <a href="https://github.com/shekark642/M222-Slackbotss/projects/1?card_filter_query=assignee%3Ajli615">Issues</a>
     <br><button onclick="getLocation()">Click to get your location using an API</button><br>
-    <input type="text" placeholder="name"><input type="text" placeholder="Are you alive?"><input type="text" placeholder="Are you dead?"><br>
+    <input type="text" placeholder="name"><input type="text" placeholder="Are you an athlete?"><input type="text" placeholder="Are you not?"><br>
     <button type="button" class="btn btn-primary" onclick="productsAdd(); clickCounter();">Submit</button>
     <button type="button" class="btn btn-primary" onclick="reloadData();">Reload Data</button>
     <button type="button" class="btn btn-primary" onclick="localStorage.clear();">Clear Storage</button>
     <table id="productTable">
         <tr>
             <td>Name</td>
-            <td>Are you alive?</td>
-            <td>Are you dead?</td>
+            <td>Are you an athlete?</td>
+            <td>Are you not?</td>
         </tr>
     </table>
     <p id="demo"></p>
@@ -48,11 +48,11 @@
 
         function imagefun() {
             var Image_Id = document.getElementById('getImage');
-            if (Image_Id.src.match("/images/bulb_on.jpg")) {
+            if (Image_Id.src.match("/images/don't panic chicken.jpg")) {
                 Image_Id.src = "/images/burnt.jpeg";
             }
             else {
-                Image_Id.src = "/images/bulb_on.jpg";
+                Image_Id.src = "/images/don't panic chicken.jpg";
             }
 
         }
