my about us page

--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -20,10 +20,9 @@
 
   <div class="row justify-content-center">
     <div class="column">
-      <img src="/src/main/staticin/static/images/don't panic chicken.jpg" th:src="@{/images/don't panic chicken.jpg}" width="50" height="50" class="face" alt="justinface">
-      <!--th:src="@{static/images/don't panic chicken.jpg}"-->
+      <img src="/src/main/staticin/static/images/joe5.png" th:src="@{/images/joe5.png}" width="50" height="50" class="face" alt="shekar">
       <p class="face-name">Justin Li</p>
-      <p class="face-text">Deployment Manager</p>
+      <p class="face-text">Navigator</p>
       <dl>
         <dt>TBD</dt>
         <dd>Desc. soon</dd>
@@ -31,9 +30,9 @@
       <center><a href="https://github.com/shekark642" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/ncs_logo.jpg" th:src="@{/images/ncs_logo.jpg}" width="50" height="50" class="face" alt="shekar">
+      <img src="/src/main/staticin/static/images/joe2.png" th:src="@{/images/joe2.png}" width="50" height="50" class="face" alt="chris">
       <p class="face-name">Shekar Krishnamoorthy</p>
-      <p class="face-text">Github Admin</p>
+      <p class="face-text">Developer</p>
       <dl>
         <dt>TBD</dt>
         <dd>Desc. soon</dd>
@@ -41,9 +40,9 @@
       <center><a href="https://github.com/jli615" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/chickenbg.jpg" th:src="@{/images/chickenbg.jpg}" width="50" height="50" class="face" alt="rohan">
+      <img src="/src/main/staticin/static/images/joe3.png" th:src="@{/images/joe3.png}" width="50" height="50" class="face" alt="sam">
       <p class="face-name">Rohan Koshy</p>
-      <p class="face-text">Technical Officer</p>
+      <p class="face-text">Designer</p>
       <dl>
         <dt>TBD</dt>
         <dd>Desc. soon</dd>
@@ -51,9 +50,9 @@
       <center><a href="https://github.com/RohanKoshy" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/bulb_on.jpg" th:src="@{/images/bulb_on.jpg}" width="50" height="50" class="face" alt="kian">
+      <img src="/src/main/staticin/static/images/joe4.png" th:src="@{/images/joe4.png}" width="50" height="50" class="face" alt="dylan">
       <p class="face-name">Kian Kishimoto</p>
-      <p class="face-text">Web Designer</p>
+      <p class="face-text">Tech Lead</p>
       <dl>
         <dt>TBD</dt>
         <dd>Desc. soon</dd>
@@ -61,9 +60,9 @@
       <center><a href="https://github.com/Uhpachee" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/bulb_off.jpg" th:src="@{/images/bulb_off.jpg}" width="50" height="50" class="face" alt="abhijay">
+      <img src="/src/main/staticin/static/images/joe4.png" th:src="@{/images/joe4.png}" width="50" height="50" class="face" alt="dylan">
       <p class="face-name">Abhijay Deevi</p>
-      <p class="face-text">Scrum Master</p>
+      <p class="face-text">Tech Lead</p>
       <dl>
         <dt>TBD</dt>
         <dd>Desc. soon</dd>
