--- a/src/main/resources/templates/fragments/nav1.html
+++ b/src/main/resources/templates/fragments/nav1.html
@@ -71,30 +71,30 @@
                 </div>
             </li>
             <li style="cursor: default">|</li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle navtext" href="#" id="navbarPal" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Chris
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/palindrome">Abstract Palindrome</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="nav-link dropdown-toggle navtext" href="#" id="navbarnonab" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: unset">
-                        Non-Abstract Palindromes
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/palindrome1">Palindrome1</a>
-                        <a class="dropdown-item" href="/palindrome2">Palindrome2</a>
-                        <a class="dropdown-item" href="/palindrome3">Palindrome3</a>
-                        <a class="dropdown-item" href="/palindrome4">Palindrome4</a>
-                    </div>
-                </div>
-            </li>
-            <li style="cursor: default">|</li>
-            <li class="nav-item active">
-                <a class="nav-link navtext" href="/feedback">Feedback <span class="sr-only">(current)</span></a>
-            </li>
-            <li style="cursor: default">|</li>
-
+            <!--           <li class="nav-item dropdown">
+                           <a class="nav-link dropdown-toggle navtext" href="#" id="navbarPal" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                               Chris
+                           </a>
+                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                               <a class="dropdown-item" href="/palindrome">Abstract Palindrome</a>
+                               <div class="dropdown-divider"></div>
+                               <a class="nav-link dropdown-toggle navtext" href="#" id="navbarnonab" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: unset">
+                                   Non-Abstract Palindromes
+                               </a>
+                               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                   <a class="dropdown-item" href="/palindrome1">Palindrome1</a>
+                                   <a class="dropdown-item" href="/palindrome2">Palindrome2</a>
+                                   <a class="dropdown-item" href="/palindrome3">Palindrome3</a>
+                                   <a class="dropdown-item" href="/palindrome4">Palindrome4</a>
+                               </div>
+                           </div>
+                       </li>
+                       <li style="cursor: default">|</li>
+                       <li class="nav-item active">
+                           <a class="nav-link navtext" href="/feedback">Feedback <span class="sr-only">(current)</span></a>
+                       </li>
+                       <li style="cursor: default">|</li>
+           -->
 
 
 
