--- a/src/main/resources/templates/rohan.html
+++ b/src/main/resources/templates/rohan.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml"
-      layout:decorate="~{layout}" lang="en">
+      layout:decorate="~{layout1}" lang="en">
 
 <head><div layout:fragment="metadata" th:remove="tag">
     <title>About Rohan</title>
@@ -22,78 +22,74 @@
 
 
     <!-- Start of body content specific to page -->
-    <div id="spring_intro" class="articles" style="margin: 30px;">
-        <h1><strong><center>Rohan's Journal!</center></strong></h1>
-    </div>
-    <center><iframe width="1000" height="800" src="https://docs.google.com/document/d/13TFapiPDNY2fzXHpgiX1vqc33jYFRHw3UGsSR5lpk68/edit?usp=sharing">
-    </iframe></center>
+ <a href="https://docs.google.com/document/d/13TFapiPDNY2fzXHpgiX1vqc33jYFRHw3UGsSR5lpk68/edit?usp=sharing">Journal</a>
+    <br><button onclick="getLocation()">Click to get your location using an API</button><br>
+    <button type="button" class="btn btn-primary" onclick="productsAdd(); clickCounter();">Submit</button>
+    <button type="button" class="btn btn-primary" onclick="reloadData();">Reload Data</button>
+    <button type="button" class="btn btn-primary" onclick="localStorage.clear();">Clear Storage</button>
+    <table id="productTable">
+        <tr>
+            <td>Name</td>
+            <td>Do you play video games?</td>
+            <td>Do you like arcade video games?</td>
+        </tr>
+    </table>
+    <p id="demo"></p>
+    <script>
+        const myElement = document.getElementById("demo");
 
+        function getLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(showPosition);
+            } else {
+                myElement.innerHTML = "Geolocation is not supported by this browser.";
+            }
+        }
+
+        function showPosition(position) {
+            myElement.innerHTML = "Latitude: " + position.coords.latitude +
+                "<br>Longitude: " + position.coords.longitude;
+        }
+
+        function imagefun() {
+            var Image_Id = document.getElementById('getImage');
+            if (Image_Id.src.match("/images/chickenbg.jpg")) {
+                Image_Id.src = "/images/chickenbg.jpeg";
+            }
+            else {
+                Image_Id.src = "/images/bulb_on.jpg";
+            }
+
+        }
+
+        function productsAdd() {
+            $("#productTable tbody").append("<tr>" +
+                "<td>Rohan</td>" +
+                "<td>Yes</td>" +
+                "<td>No</td>" +
+                "</tr>");
+        }
+
+        function clickCounter() {
+            if(typeof(Storage) !== "undefined") {
+                if (localStorage.clickcount) {
+                    localStorage.clickcount = Number(localStorage.clickcount)+1;
+                } else {
+                    localStorage.clickcount = 1;
+                }
+            } else {
+                document.getElementById("result").innerHTML = "Sorry, your browser does not support web storage...";
+            }
+        }
+        function reloadData(){
+            for (let i = 1; i <= localStorage.clickcount; i++) {
+                productsAdd();
+            }
+        }
+    </script>
     <!-- End of body content specific to page -->
 </div>
-<br><button onclick="getLocation()">Click to get your location using an API</button><br>
-<button type="button" class="btn btn-primary" onclick="productsAdd(); clickCounter();">Submit</button>
-<button type="button" class="btn btn-primary" onclick="reloadData();">Reload Data</button>
-<button type="button" class="btn btn-primary" onclick="localStorage.clear();">Clear Storage</button>
-<table id="productTable">
-    <tr>
-        <td>Name</td>
-        <td>Do you play video games?</td>
-        <td>Do you like arcade video games?</td>
-    </tr>
-</table>
-<p id="demo"></p>
-<script>
-    const myElement = document.getElementById("demo");
 
-    function getLocation() {
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(showPosition);
-        } else {
-            myElement.innerHTML = "Geolocation is not supported by this browser.";
-        }
-    }
-
-    function showPosition(position) {
-        myElement.innerHTML = "Latitude: " + position.coords.latitude +
-            "<br>Longitude: " + position.coords.longitude;
-    }
-
-    function imagefun() {
-        var Image_Id = document.getElementById('getImage');
-        if (Image_Id.src.match("/images/chickenbg.jpg")) {
-            Image_Id.src = "/images/chickenbg.jpeg";
-        }
-        else {
-            Image_Id.src = "/images/bulb_on.jpg";
-        }
-
-    }
-
-    function productsAdd() {
-        $("#productTable tbody").append("<tr>" +
-            "<td>Rohan</td>" +
-            "<td>Yes</td>" +
-            "<td>No</td>" +
-            "</tr>");
-    }
-
-    function clickCounter() {
-        if(typeof(Storage) !== "undefined") {
-            if (localStorage.clickcount) {
-                localStorage.clickcount = Number(localStorage.clickcount)+1;
-            } else {
-                localStorage.clickcount = 1;
-            }
-        } else {
-            document.getElementById("result").innerHTML = "Sorry, your browser does not support web storage...";
-        }
-    }
-    function reloadData(){
-        for (let i = 1; i <= localStorage.clickcount; i++) {
-            productsAdd();
-        }
-    }
-</script>
 </body>
 
 </html>
