--- a/src/main/resources/templates/rohan.html
+++ b/src/main/resources/templates/rohan.html
@@ -7,7 +7,7 @@
 </div></head>
 
 
-<body><div layout:fragment="content" th:remove="tag">
+<body style="background-color:powderblue"><div layout:fragment="content" th:remove="tag">
     <p><a href="/rohan/light">light</a></p>
     <!-- Start of body content specific to page -->
     <div id="spring_intro1" class="articles" style="margin: 30px;">
