--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -16,6 +16,10 @@
 <body class="about-bg"><div layout:fragment="content" th:remove="tag">
   <h1 class="about-header">About Us</h1>
   <p class="about-body"><a href="/bwaboutus">Non-grayscale About US</a></p>
+  <ul style="text-align: center">
+
+    <a href="key?keyword=technology" class="button button5">Click for API</a>
+  </ul>
   <p class="about-body">Collaborators On This Project</p>
 
   <div class="row justify-content-center">
