--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -15,12 +15,11 @@
 
 <body class="about-bg"><div layout:fragment="content" th:remove="tag">
   <h1 class="about-header">About Us</h1>
-  <p class="about-body"><a href="/bwaboutus">Non-grayscale About US</a></p>
   <p class="about-body">Collaborators On This Project</p>
 
   <div class="row justify-content-center">
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe5.png" th:src="@{/images/joe5.png}" width="50" height="50" class="face" alt="shekar">
+      <img src="/src/main//static/images/don't panic chicken.jpg" th:src="@{/images/don't panic chicken.jpg}" width="50" height="50" class="face" alt="shekar">
       <p class="face-name">Justin Li</p>
       <p class="face-text">Navigator</p>
       <dl>
