about us page complete

--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -24,52 +24,47 @@
 
   <div class="row justify-content-center">
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe5.png" th:src="@{/images/joe5.png}" width="50" height="50" class="face" alt="shekar">
+      <img src="/src/main/static/images/don't panic chicken.jpg" th:src="@{/images/don't panic chicken.jpg}" width="50" height="50" class="face" alt="shekar">
       <p class="face-name">Justin Li</p>
-      <p class="face-text">Navigator</p>
+      <p class="face-text">Deployment Officer</p>
       <dl>
-        <dt>TBD</dt>
-        <dd>Desc. soon</dd>
+        <a href="/justin">Individual About Us Page</a>
       </dl>
       <center><a href="https://github.com/shekark642" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe2.png" th:src="@{/images/joe2.png}" width="50" height="50" class="face" alt="chris">
+      <img src="/src/main/static/images/ncs_logo.jpg" th:src="@{/images/ncs_logo.jpg}" width="50" height="50" class="face" alt="chris">
       <p class="face-name">Shekar Krishnamoorthy</p>
-      <p class="face-text">Developer</p>
+      <p class="face-text">Github Manager</p>
       <dl>
-        <dt>TBD</dt>
-        <dd>Desc. soon</dd>
+        <a href="/shekar">Individual About Us Page</a>
       </dl>
       <center><a href="https://github.com/jli615" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe3.png" th:src="@{/images/joe3.png}" width="50" height="50" class="face" alt="sam">
+      <img src="/src/main/static/images/chickenbg.jpg" th:src="@{/images/chickenbg.jpg}" width="50" height="50" class="face" alt="sam">
       <p class="face-name">Rohan Koshy</p>
-      <p class="face-text">Designer</p>
+      <p class="face-text">Technical Officer</p>
       <dl>
-        <dt>TBD</dt>
-        <dd>Desc. soon</dd>
+        <a href="/rohan">Individual About Us Page</a>
       </dl>
       <center><a href="https://github.com/RohanKoshy" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe4.png" th:src="@{/images/joe4.png}" width="50" height="50" class="face" alt="dylan">
+      <img src="/src/main/static/images/bulb_on.jpg" th:src="@{/images/bulb_on.jpg}" width="50" height="50" class="face" alt="dylan">
       <p class="face-name">Kian Kishimoto</p>
-      <p class="face-text">Tech Lead</p>
+      <p class="face-text">Web designer</p>
       <dl>
-        <dt>TBD</dt>
         <a href="/kian">Individual About Us Page</a>
       </dl>
       <center><a href="https://github.com/Uhpachee" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/staticin/static/images/joe4.png" th:src="@{/images/joe4.png}" width="50" height="50" class="face" alt="dylan">
+      <img src="/src/main/static/images/bulb_off.jpg" th:src="@{/images/bulb_off.jpg}" width="50" height="50" class="face" alt="dylan">
       <p class="face-name">Abhijay Deevi</p>
-      <p class="face-text">Tech Lead</p>
+      <p class="face-text">Scrum Master</p>
       <dl>
-        <dt>TBD</dt>
-        <dd>Desc. soon</dd>
+        <a href="/abhijay">Individual About Us Page</a>
       </dl>
       <center><a href="https://github.com/Dubshott" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
