added animations to about us

--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -55,7 +55,7 @@
       <p class="face-name">Kian Kishimoto</p>
       <p class="face-text">Web designer</p>
       <dl>
-        <a href="/kian">Individual About Us Page</a>
+        <a href="/kiantransition">Individual About Us Page</a>
       </dl>
       <center><a href="https://github.com/Uhpachee" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
